[package]
name = "rust-snippets"
version = "0.1.0"
authors = ["Albino Cordeiro <albino@intuitionlogic.com>"]
edition = "2018"
description = "Random interesting things in coded in Rust"
repository = "https://github.com/albinocordeiro/rust-snippets"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
clap = "^2.33"
serde = "^1"
serde_json = "^1"
serde_derive= "^1"
csv = "^1"
chrono = {version = "^0.4", features = ["serde"]}
rand = "0.8.3"
tokio = {version = "^1", features = ["full"]}
rayon = "1.5.0"
textplots = "0.6.0"

[dev-dependencies]
assert = "0.7.4"
